--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "homepage": "https://github.com/Lidemy/mentor-program-4th#readme",
   "dependencies": {
-    "request": "^2.88.2"
+    "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
+    "request": "^2.88.2",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
@@ -37,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5"
+    "lint-staged": "^8.1.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
